# Object-detection-algorithms-in-embedded-systems

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  setup.sh
cfg/: benchmark.cfg  cameraInference.cfg  videoInference.cfg
scripts/: install_jetson.sh  install_x86-64.sh  setup.sh  setup_x86-64_wsl2.sh  uninstall.sh
src/: sandbox.cpp
src/components/detection/yoloDetection/: yoloDetection.hpp
src/components/detection/yoloDetectionTRT/: yoloDetectionTRT.cpp  yoloDetectionTRT.hpp
src/components/input/cameraInput/: cameraInput.cpp  cameraInput.hpp
src/components/input/imageInput/: imageInput.hpp
src/components/input/videoInput/: videoInput.cpp  videoInput.hpp
src/components/output/windowOutput/: windowOutput.cpp  windowOutput.hpp
src/components/utils/ConfigLoader/: ConfigLoader.cpp
src/components/utils/FpsCounter/: FpsCounter.cpp
src/detection/: baseDetection.hpp  detection.cpp  detection.hpp
src/detection/yoloDetection/: yoloDetection.cpp  yoloDetection.hpp
src/image/: image.cpp  image.hpp
src/input/: baseInput.hpp  input.hpp
src/input/cameraInput/: cameraInput.cpp  cameraInput.hpp
src/input/image/: image.cpp  image.hpp
src/input/imageInput/: imageInput.cpp  imageInput.hpp
src/input/video/: video.cpp  video.hpp
src/input/videoInput/: videoInput.hpp
src/output/: baseOutput.hpp
src/output/windowOutput/: windowOutput.cpp  windowOutput.hpp
src/programs/benchmark/: benchmark.cpp  benchmark.hpp
src/programs/cameraInference/: cameraInference.cpp  cameraInference.hpp
src/programs/example/: example.cpp  example.hpp
src/programs/videoInference/: videoInference.cpp  videoInference.hpp
src/sandbox/: sandbox.cpp  sandbox.hpp
src/utils/ConfigLoader/: ConfigLoader.cpp  ConfigLoader.hpp
src/utils/FpsCounter/: FpsCounter.hpp
src/vision/ai/: ai.cpp
src/vision/input/: input.hpp
src/vision/input/image/: image.cpp  image.hpp
src/vision/input/video/: video.cpp  video.hpp
src/window/: window.cpp  window.hpp
test/: test_main.cpp
test/TestImage/: TestImage.cpp  TestImage.hpp
test/TestImageInput/: TestImageInput.cpp  TestImageInput.hpp
test/TestVideoInput/: TestVideoInput.cpp  TestVideoInput.hpp
test/TestWindow/: TestWindow.cpp  TestWindow.hpp
test/TestWindowOutput/: TestWindowOutput.cpp  TestWindowOutput.hpp
